fixing the responsiveness

--- a/challenge03/index.html
+++ b/challenge03/index.html
@@ -13,45 +13,72 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-   
+
 
 </head>
 <body>
-  
+   
     <section class="container">
+      <h1>Pricing</h1>
         <section class="cards-wrapper">
          <div class="card">
-            <div class="card-body">
-               <p class="details number">1 Photo</p>
-               <p class="details prices">$39.99</p>
-               <p class="details text">per photo</p>
+            <div class="card-header">
+               <h1>Single Photos</h1>
             </div>
+            <div class="card-body">
+               <ul>
+               <li class="details number">1 Photo</li>
+               <li class="details prices">$39.99</li>
+               <li class="details text">per photo</li>
+            </ul>
+            </div>
+          <div class="card-footer">
+            <button class="btn">Subscribe</button>
+           </div>
+            
           </div>
         </section>
-        <section class="cards-wrapper">
+
+
+      <section class="cards-wrapper">
          <div class="card">
+            <div class="card-header">
+               <h1>Small Packages</h1>
+            </div>
              <div class="card-body">
-                <p class="details number">3-5 Photo</p>
-               <p class="details prices">$34.99</p>
-               <p class="details text">per photo</p> 
-           </div>
-           <div class="card-footer">
-             <button class="btn">Order now</button>
-           </div>
-        </div>
-        </section>
+                <ul>
+                <li class="details number">3-5 Photos</li>
+               <li class="details prices">$34.99</li>
+               <li class="details text">per photo</li>
+            </ul>
+            </div>
+           <div class="card-footer"> 
+            <button class="btn">Order now</button>
+            </div>
+         </div>
+       </section>
+
         <section class="cards-wrapper">
          <div class="card">
+            <div class="card-header">
+               <h1>Large Packages</h1>
+            </div>
             <div class="card-body">
-              <p class="details number">6-8 Photo</p>
-              <p class="details prices">$30.99</p>
-              <p class="details text">per photo</p>
+            <ul>
+              <li class="details number">6-8 Photos</li>
+              <li class="details prices">$30.99</li>
+              <li class="details text">per photo</li>
+            </ul>
            </div>
-        </div> 
-      
-       </section>
+           <div class="card-footer"> 
+              <!-- <button class="btn">Subscribe now</button> -->
+            </div>
+        </div>
+
+         </section>
+
     </section>
 
 
 </body>
-</html>  
+</html>
