fixed the responsiveness

--- a/challenge03/index.html
+++ b/challenge03/index.html
@@ -19,7 +19,9 @@
 <body>
    
     <section class="container">
+     
       <h1>Pricing</h1>
+      <section class="card-container">
         <section class="cards-wrapper">
          <div class="card">
             <div class="card-header">
@@ -71,12 +73,12 @@
             </ul>
            </div>
            <div class="card-footer"> 
-              <!-- <button class="btn">Subscribe now</button> -->
+              <button class="btn">Subscribe now</button>
             </div>
         </div>
 
          </section>
-
+      </section>
     </section>
 
 
