fixed the icons issue

--- a/challenge01/review.html
+++ b/challenge01/review.html
@@ -9,11 +9,19 @@
     <link rel="stylesheet" href="stylereview.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/46b13243e4.js" crossorigin="anonymous"></script>
-
+<style>
+    .contact__header{
+            text-align:center;
+            margin:10px;
+            font-size:3rem;
+            font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            color:saddlebrown;
+        }
+</style>
   </head>
 
   <body>
-    <h1> Reviews</h1>
+    <h1  class="contact__header"> Reviews</h1>
 
 <section class="container">
    <section class="wrapper">
