--- a/challenge03/index.html
+++ b/challenge03/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mintbean Learn-a-bit Challenge 02 - Gallery</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylepricing.css">
     <link rel="stylesheet" href=
 "https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -14,13 +14,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 
-
+    <style>
+      .contact__header{
+              text-align:center;
+              margin:15px 10px;
+              font-size:3rem;
+              font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+              color:saddlebrown;
+          }
+  </style>
 </head>
 <body>
    
     <section class="container">
-     
-      <h1>Pricing</h1>
+      <h1  class="contact__header"> Pricing</h1>
+<!--      
+      <h1>Pricing</h1> -->
       <section class="card-container">
         <section class="cards-wrapper">
          <div class="card">
