--- a/challenge01/reviews.html
+++ b/challenge01/reviews.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mintbean Learn-a-bit Challenge 04 - Review</title>
     <!-- Font Awesome Icon Library -->
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="stylereview.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/46b13243e4.js" crossorigin="anonymous"></script>
@@ -21,6 +22,29 @@
   </head>
 
   <body>
+    <nav>
+      <!-- <div class="nav-logo"></div>
+       <img src="images/learnabit-logo.svg" class="logo" alt="logo" />
+      </div>  -->
+      
+      
+      <ul class="nav-menu">
+         <li class="nav-logo"><a href="#"><img src="index_images/learnabit-logo.svg" class="logo" alt="logo" />
+      </a></li>
+          <li class="nav-links" ><a href="index.html">Home</a></li>
+         <li class="nav-links" ><a href="photos.html">Photos</a></li>
+         <li class="nav-links"><a href="pricing.html">Pricing</a></li>
+         <li class="nav-links"><a href="reviews.html">Reviews</a></li>
+         <li class="nav-links"><a href="contact.html">Contact</a></li>
+         <!-- <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li> -->
+      </ul>
+      <div class="hamburger">
+          <span class="bar"></span>
+         <span class="bar"></span>
+         <span class="bar"></span> 
+  
+        </div> 
+  </nav>
     <h1  class="contact__header"> Reviews</h1>
 
 <section class="container">
