--- a/challenge01/index.html
+++ b/challenge01/index.html
@@ -44,6 +44,7 @@
                <li class="nav-links"><a href="pricing.html" >Pricing</a></li>
                <li class="nav-links"><a href="reviews.html" >Reviews</a></li>
                <li class="nav-links"><a href="contact.html" >Contact</a></li>
+               <li class="nav-links"><a href="temp.html" >Contact</a></li>
                <!-- <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
                 -->
             </ul>
