--- a/challenge01/index.html
+++ b/challenge01/index.html
@@ -43,8 +43,8 @@
                <li class="nav-links" ><a href="photos.html" >Photos</a></li>
                <li class="nav-links"><a href="pricing.html" >Pricing</a></li>
                <li class="nav-links"><a href="reviews.html" >Reviews</a></li>
-               <li class="nav-links"><a href="contact.html" >Contact</a></li>
-               <li class="nav-links"><a href="temp.html" >Contact</a></li>
+               <li class="nav-links"><a href="contacts.html" >Contact</a></li>
+             
                <!-- <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
                 -->
             </ul>
